# pascal-tri

./: .gitignore  README.md  pascal.py  setup.cfg
.github/workflows/: python-publish.yml
pascal/: __init__.py  __main__.py
