# https://setuptools.readthedocs.io/en/latest/userguide/index.html
[metadata]
name = pascal-tri
version = file: VERSION
author = jack-mil
description = Module for generating and printing Pascal's Triangle
long_description = file: README.md
long_description_content_type: text/markdown
url = https://github.com/jack-mil/pascal
license = MIT
classifiers =
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
    packages = pascal
    python_requires = >= 3.9

[options.entry_points]
console_scripts =
    pascal = pascal.__main__:main

[options.data_files]
VERSION = VERSION
README.md = README.md
